--- a/badword.html
+++ b/badword.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang='en' class=''>
    <head>
+      <title>Bad Word Manipulation</title>
       <meta charset='UTF-8'>
       <meta name="robots" content="noindex">
       <meta name="viewport" content="width=device-width, initial-scale=1">
