--- a/BadWord/index.html
+++ b/BadWord/index.html
@@ -32,7 +32,7 @@
                <div class="form-group">
                   <div class="col-sm-offset-7 col-sm-8">
                      <button id="btn1" class="btn btn-sm btn-primary">Explanation</button>
-                     <a href="./translate.html"><button class="btn btn-sm btn-primary">Translator</button></a>
+                     <a href="./translate.html" target="_blank"><button class="btn btn-sm btn-primary">Translator</button></a>
                   </div>
                   <div class="col-sm-offset-4 col-sm-8">
                      <p></p>
