--- a/404.html
+++ b/404.html
@@ -37,7 +37,7 @@
 <div class="content">
     <center>
     <br><br>
-    <h3>This.vid</h3>
+    <h3>JNCK MEDIA</h3>
         <small>Click <b>Continue</b> to be redirected to the download page</small>
         <br><br>
     <div id="pindah"></div>
