--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <title>This.vid</title>
+    <title>JNCK MEDIA</title>
     <script type='text/javascript'>
         function getMobileOperatingSystem() {
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
@@ -38,7 +38,7 @@
     <center>
     <br><br>
     <h3>JNCK MEDIA</h3>
-        <small>Click <b>Continue</b> to be redirected to the download page</small>
+        <small>Click <b>Continue</b> to be redirected to the destination page</small>
         <br><br>
     <div id="pindah"></div>
     </center>
